# CS260_theEngineer

./: .gitignore  .run_engineer.sh.swp  CMakeLists.txt  CS260_theEngineer  main.cpp  promoteExample.txt  run_engineer.sh  ssh-keygen -t ed  ssh-keygen -t ed.pub  thEngineer.txt  theEngineer.cpp  theEngineer.h  theEngineer.txt  theEngineerList.cpp  theEngineerList.h  valgrindResutls.txt
DesignWriteUp-thEngineer/: design1.txt  efficiency1.txt
